# QEMU-OUT-frame

./: APB_ANALYSIS_REPORT.md  EXTRACTION_TEST_RESULTS.md  README.md  basic_timer.c  gpio_top.h
gpio0/: README.md  gpio_top.c  gpio_top.h
gpio0_test/: gpio_top.c  gpio_top.h
gpio0_verilog/: gpio_top.c  gpio_top.h
src/: CMakeLists.txt  ClkAnalysisResult.h  SignalTracing.h  tool_main.cpp
src/include/: Passes.td
src/lib/: ClkAnalysisResult.cpp  ClkAnalysisResult.h  CombTranslator.h  Passes.cpp  QEMUCodeGen.cpp  QEMUCodeGen.h  SignalTracing.h
test/: basic_timer.h  gpio_top.c  simple_counter.c  simple_counter.h  watchdog_timer.c  watchdog_timer.h
test/source/: gpio0_llhd.mlir  simple_counter.llhd.mlir  simple_counter.sv  watchdog_timer.llhd.mlir  watchdog_timer.sv
